tests/opaque_type_error/opaque_type_error.exp
Error: importtest.js:7
  7: (3 : ID); // Error: number ~> ID
      ^ Cannot cast `3` to `ID` because number [1] is incompatible with `ID` [2].
  References:
    7: (3 : ID); // Error: number ~> ID
        ^ [1]: number
    7: (3 : ID); // Error: number ~> ID
            ^^ [2]: `ID`

Error: importtest.js:10
 10:     return x;
                ^ number. This type is incompatible with the expected return type of
  9: function bad1(x: number) : ID { // Error: number ~> ID
                                ^^ ID

Error: importtest.js:14
 14:     return Test.hide(x); // Error: ID ~> number
                          ^ ID. This type is incompatible with the expected param type of
 12: export function hide(x: number) : ID {
                             ^^^^^^ number. See: test.js:12

Error: importtest.js:18
 18:     return x; // Error: ID ~> ID2
                ^ ID. This type is incompatible with the expected return type of
 17: function bad3(x: ID) : ID2 {
                            ^^^ number

Error: importtest.js:22
 22:     return x;
                ^ number. This type is incompatible with the expected return type of
 21: function bad4(x: ID2) : ID { // Error: ID2 ~> ID
                             ^^ ID

Error: test.js:17
 17: ("hello": MyNum) // Error: string ~> number
      ^^^^^^^ Cannot cast `"hello"` to `MyNum` because string [1] is incompatible with number [2].
  References:
   17: ("hello": MyNum) // Error: string ~> number
        ^^^^^^^ [1]: string
   17: ("hello": MyNum) // Error: string ~> number
                 ^^^^^ [2]: number


Found 6 errors
